# cue-extraction-pipeline

./: .env.example  .gitignore  README.md  bank_transactions.csv  invoices.csv  pyproject.toml
docs/: DESIGN.md  triage.md
evals/: __init__.py  evaluator.py  golden_invoices.jsonl
src/invoice_extractor/: __init__.py  candidates.py  cli.py  llm_extract.py  models.py  normalize.py  pdf_text.py  pipeline.py  triage.py  validate.py
src/invoice_extractor/core/: __init__.py  models.py  tracing.py
src/invoice_extractor/extraction/: __init__.py  candidates.py  llm.py  pipeline.py  validate.py
src/invoice_extractor/triage/: __init__.py  decision.py  matcher.py
tests/: test_candidates.py  test_cli.py  test_evaluator.py  test_llm_extract.py  test_models.py  test_normalize.py  test_pdf_text.py  test_triage.py  test_validate.py
