[project]
name = "ner-challenge"
version = "0.1.0"
description = "Invoice extraction and reconciliation proof of concept for the Cue AI engineer exercise."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pandas",
    "pydantic>=2",
    "pymupdf",
    "python-dotenv",
    "rapidfuzz",
]

[project.scripts]
invoice-extract = "invoice_extractor.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_extractor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
